# adnn

./: .gitignore  README.md  pyproject.toml
adnn/: __main__.py
adnn/datasets/: base.py  vector.py
adnn/methods/: adnn_linear.py  adnn_linear_test.py
adnn/tasks/: base.py  regression.py
adnn/trainers/: base.py  standard_trainer.py
adnn/utils/: config.py  data.py  debug.py  eval.py  logging.py  train.py
configs/: default.yaml
