[tool.poetry]
name = "adnn"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacob@deepshard.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
